--- a/3Deyes.html
+++ b/3Deyes.html
@@ -57,7 +57,7 @@
     </div>
     <div class="info">
         <span>Design by Aaron Eiland</span>
-        <span>Code by Max Chiang</span>
+        <span>Code by Mindy Wang</span>
     </div>
     <script src="./main.js"></script>
 </body>
